Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124908

QtView does not destroy the foreign parent window it is wrapped by

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • 6.8.0 FF
    • 6.7.0
    • QPA: Android
    • None
    • 9ef4435fb (dev)

    Description

      Since the parent foreign window now wraps the QtView, it should always be destroyed when the QtView is. The child window (QQuickView) destruction is handled by the parent window, and should not be tried to destruct again.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            pevirkku Petri Virkkunen
            pevirkku Petri Virkkunen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes